--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projet">
+        <activity android:name=".ParametersActivity"></activity>
+        <activity android:name=".ui.ParametersActivity"></activity>
         <activity android:name=".Commencer">
             android:parentActivityName=".MainActivity"
         </activity>
