Frag_home + ajout
Avancement

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projet">
+        <activity android:name=".ui.Ajout"></activity>
         <activity android:name=".Commencer">
             android:parentActivityName=".MainActivity"
         </activity>
